ResearchOps/mnist/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnist-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  rules:
  - host: mnist.mlops.pub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mnist-web
            port:
              name: http
  tls:
  - hosts:
    - mnist.mlops.pub
    secretName: mnist-mlops-pub-tls
